# mimiclaw

./: AGENTS.md  CLAUDE.md  CODEX.md  README.md  sdkconfig.defaults
.github/workflows/: build.yml  release.yml
assets/: aisync_logo_200x200.rgb565  aisync_logo_320x320.rgb565  aisync_logo_360x360.rgb565
docs/: ARCHITECTURE.md  GUI_A2UI.md  TODO.md
docs/hardware/: WAVESHARE_ESP32_S3_TOUCH_LCD_1_46B.md
main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h
main/agent/: context_builder.c
main/board/: board_pins.h
main/buttons/: button_driver.c  button_driver.h
main/cli/: serial_cli.c
main/display/: display.c  display.h  display_panel.h  display_panel_spd2010.c  display_panel_st7789t.c
main/gateway/: ws_server.c
main/imu/: I2C_Driver.c  I2C_Driver.h
main/io_expander/: tca9554.c  tca9554.h
main/skills/: skill_loader.c
main/ui/: config_screen.c  lvgl_adapter.c  lvgl_adapter.h  standard_ui.c  standard_ui.h
spiffs_data/config/: AGENTS.md  SOUL.md
